Redesign front page.

--- a/html/design-patterns-revisited.html
+++ b/html/design-patterns-revisited.html
@@ -92,43 +92,6 @@
 </div>
 <div class="page sidebar">
 <div class="content">
-<div class="in-progress">
-  <span class="dismiss">&times;</span>
-  <h2>This book is a work in progress!</h2>
-
-  <p>If you see a mistake, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues" target="_blank">file a ticket</a>. To know when new chapters are up, join the mailing list:</p>
-
-  <!-- Begin MailChimp Signup Form -->
-  <div id="mc_embed_signup">
-  <form action="http://gameprogrammingpatterns.us7.list-manage.com/subscribe/post?u=0952ca43ed2536d6717766b88&amp;id=0c27329244" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <table>
-      <tr>
-        <td width="100%">
-          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-        </td>
-        <td>
-          <div class="spacer"></div>
-        </td>
-        <td>
-          <input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe" class="button">
-        </td>
-      </tr>
-    </table>
-  </form>
-  </div>
-  <!--End mc_embed_signup-->
-
-  <table width="100%">
-    <tr>
-      <td width="50%">
-        <p>Thank you!</p>
-      </td>
-      <td width="50%">
-        <p class="signature">&mdash; Bob Nystrom (<a href="https://twitter.com/intent/user?screen_name=munificentbob" target="_blank">@munificentbob</a>)</p>
-      </td>
-    </tr>
-  </table>
-</div>
 <h1>Design Patterns Revisited</h1>
 <h1 class="book"><a href="index.html">Game Programming Patterns</a></h1>
 <p><em>Design Patterns: Elements of Reusable Object-Oriented Software</em> is nearly twenty years old as I write this. Unless you&#x2019;re looking over my shoulder, there&#x2019;s a good chance <em>Design Patterns</em> will be old enough to drink by the time you read this. For an industry as quickly moving as software, that&#x2019;s practically ancient. The enduring popularity of the book says something about the timelessness of design compared to many technologies, languages, and methodologies.</p>
@@ -143,7 +106,7 @@
 <li><a href="singleton.html">Singleton</a></li>
 <li><a href="state.html">State</a></li>
 </ul>
-<p class="footer">&copy; 2009-2014 Bob Nystrom</p>
+<p class="footer">&copy; 2009-2014 Robert Nystrom</p>
 </div>
 </div>
 </body>
