--- a/html/optimization-patterns.html
+++ b/html/optimization-patterns.html
@@ -92,43 +92,6 @@
 </div>
 <div class="page sidebar">
 <div class="content">
-<div class="in-progress">
-  <span class="dismiss">&times;</span>
-  <h2>This book is a work in progress!</h2>
-
-  <p>If you see a mistake, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues" target="_blank">file a ticket</a>. To know when new chapters are up, join the mailing list:</p>
-
-  <!-- Begin MailChimp Signup Form -->
-  <div id="mc_embed_signup">
-  <form action="http://gameprogrammingpatterns.us7.list-manage.com/subscribe/post?u=0952ca43ed2536d6717766b88&amp;id=0c27329244" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <table>
-      <tr>
-        <td width="100%">
-          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-        </td>
-        <td>
-          <div class="spacer"></div>
-        </td>
-        <td>
-          <input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe" class="button">
-        </td>
-      </tr>
-    </table>
-  </form>
-  </div>
-  <!--End mc_embed_signup-->
-
-  <table width="100%">
-    <tr>
-      <td width="50%">
-        <p>Thank you!</p>
-      </td>
-      <td width="50%">
-        <p class="signature">&mdash; Bob Nystrom (<a href="https://twitter.com/intent/user?screen_name=munificentbob" target="_blank">@munificentbob</a>)</p>
-      </td>
-    </tr>
-  </table>
-</div>
 <h1>Optimization Patterns</h1>
 <h1 class="book"><a href="index.html">Game Programming Patterns</a></h1>
 <p>While the rising tide of faster and faster hardware has lifted most software above worrying about performance, games are one of the few remaining exceptions. Players always want richer, more realistic and exciting experiences. Screens are crowded with games vying for a player&#x2019;s attention&thinsp;&mdash;&thinsp;and cash!&thinsp;&mdash;&thinsp;and the game that squeezes the most out of the hardware often wins.</p>
@@ -141,7 +104,7 @@
 <li><a href="object-pool.html">Object Pool</a></li>
 <li><a href="spatial-partition.html">Spatial Partition</a></li>
 </ul>
-<p class="footer">&copy; 2009-2014 Bob Nystrom</p>
+<p class="footer">&copy; 2009-2014 Robert Nystrom</p>
 </div>
 </div>
 </body>
