--- a/html/state.html
+++ b/html/state.html
@@ -102,43 +102,6 @@
 </div>
 <div class="page sidebar">
 <div class="content">
-<div class="in-progress">
-  <span class="dismiss">&times;</span>
-  <h2>This book is a work in progress!</h2>
-
-  <p>If you see a mistake, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues" target="_blank">file a ticket</a>. To know when new chapters are up, join the mailing list:</p>
-
-  <!-- Begin MailChimp Signup Form -->
-  <div id="mc_embed_signup">
-  <form action="http://gameprogrammingpatterns.us7.list-manage.com/subscribe/post?u=0952ca43ed2536d6717766b88&amp;id=0c27329244" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <table>
-      <tr>
-        <td width="100%">
-          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-        </td>
-        <td>
-          <div class="spacer"></div>
-        </td>
-        <td>
-          <input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe" class="button">
-        </td>
-      </tr>
-    </table>
-  </form>
-  </div>
-  <!--End mc_embed_signup-->
-
-  <table width="100%">
-    <tr>
-      <td width="50%">
-        <p>Thank you!</p>
-      </td>
-      <td width="50%">
-        <p class="signature">&mdash; Bob Nystrom (<a href="https://twitter.com/intent/user?screen_name=munificentbob" target="_blank">@munificentbob</a>)</p>
-      </td>
-    </tr>
-  </table>
-</div>
 <h1>State</h1>
 <h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="design-patterns-revisited.html">Design Patterns Revisited</a></span></h1>
 <p>Confession time: I went a little overboard and packed way too much into this chapter. It&#x2019;s ostensibly about the <a href="http://en.wikipedia.org/wiki/State_pattern" class="gof-pattern">State design pattern</a>. But I can&#x2019;t talk about that and games without going into the more fundamental concept of <em>finite state machines</em> (or "FSMs"). But then once I went there, I figured I might as well introduce <em>hierarchical state machines</em> and <em>pushdown automata</em>.</p>
@@ -752,7 +715,7 @@
 <li>The entity responds to a series of inputs or events over time.</li>
 </ol>
 <p>In games, they are most known for being used in AI, but they are also common in implementations of user input handling, navigating menu screens, parsing text, network protocols, and other asynchronous behavior.</p>
-<p class="footer">&copy; 2009-2014 Bob Nystrom</p>
+<p class="footer">&copy; 2009-2014 Robert Nystrom</p>
 </div>
 </div>
 </body>
