--- a/html/bytecode.html
+++ b/html/bytecode.html
@@ -853,6 +853,9 @@ Those languages leave it to the <em>user</em> to make sure they don&#x2019;t wri
 <p>The <a href="http://www.lua.org/">Lua</a> programming language is the most widely-used scripting language in games. It&#x2019;s implemented internally as a very compact register-based bytecode VM.</p>
 </li>
 <li>
+<p><a href="http://en.wikipedia.org/wiki/UnrealEd#Kismet">Kismet</a> is a graphical scripting tool built into UnrealEd, the editor for the Unreal engine.</p>
+</li>
+<li>
 <p>My own little scripting language <a href="https://github.com/munificent/wren">Wren</a> is a simple stack-based bytecode interpreter.</p>
 </li>
 </ul>
